deployment/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./deployment
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./deployment
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  name: database-secret
                  key: database-user
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: database-secret
                  key: database-password
            - name: MYSQL_HOST
              valueFrom:
                secretKeyRef:
                  name: database-secret
                  key: database-host
            - name: MYSQL_PORT
              valueFrom:
                secretKeyRef:
                  name: database-secret
                  key: database-port
            - name: MYSQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: database-secret
                  key: database-name
          image: mariadb:latest
          name: database
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: database-cm0
              subPath: init.sql
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: init.sql
                path: init.sql
            name: database-cm0
          name: database-cm0
