deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./deployment
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./deployment
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: ghcr.io/jonathanxdr/notes-frontend:latest
          name: frontend
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
