deployment/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./deployment
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traefik
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./deployment
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: traefik
    spec:
      containers:
        - args:
            - --providers.kubernetesingress=true
            - --entrypoints.default.address=:80
          image: traefik:latest
          name: traefik
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
